@@ -119,7 +119,7 @@ public class CodestreamManipulator{
     /**
      * Instantiates a codestream manipulator..
      *
-     * @param outname The name of the original outfile
+     * @param file The file of the original outfile
      *
      * @param nt The number of tiles in the image
      *
@@ -242,7 +242,7 @@ public class CodestreamManipulator{
             // Read SOT marker
             fi.readUnsignedShort(); // Skip SOT
             pos = fi.getPos();
-            markPos.addElement(new Integer(fi.getPos()));
+            markPos.addElement(Integer.valueOf(fi.getPos()));
             fi.readInt();           // Skip Lsot and Isot
             length = fi.readInt();  // Read Psot
             fi.readUnsignedShort(); // Skip TPsot & TNsot
@@ -281,7 +281,7 @@ public class CodestreamManipulator{
                                         fi.readUnsignedByte());
                     i++;
                     if(marker == Markers.SOP){
-                        markPos.addElement(new Integer(fi.getPos()));
+                        markPos.addElement(Integer.valueOf(fi.getPos()));
                         ppt[t]++;
                         sop++;
 			fi.skipBytes(4);
@@ -289,14 +289,14 @@ public class CodestreamManipulator{
                     }
 
                     if(marker == Markers.EPH){
-                        markPos.addElement(new Integer(fi.getPos()));
+                        markPos.addElement(Integer.valueOf(fi.getPos()));
                         eph++;
                     }
                 }
                 i++;
             }
         }
-        markPos.addElement(new Integer(fi.getPos()+2));
+        markPos.addElement(Integer.valueOf(fi.getPos()+2));
         positions = new Integer[markPos.size()];
         markPos.copyInto(positions);
     }
@@ -314,7 +314,7 @@ public class CodestreamManipulator{
 
         // Buffer main header
         fi.seek(0);
-        length = ((Integer)positions[0]).intValue()-2;
+        length = positions[0].intValue()-2;
         mainHeader = new byte[length];
         fi.readFully(mainHeader,0,length);
         markIndex = 0;
